Addded styling and content to FAQ section, fixing spacing on all sections to be uniform

--- a/app/public/wp-content/themes/victoryPropertyBuyers/partials/_faq.scss
+++ b/app/public/wp-content/themes/victoryPropertyBuyers/partials/_faq.scss
@@ -1,5 +1,5 @@
 .faq {
-  width: 40%;
+  width: 45%;
   height: auto;
   margin: 0 auto;
   &__image {
@@ -10,7 +10,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 10
+    
+    0%;
     height: 400px;
     margin: 0 auto;
     &-overlay {
