--- a/app/public/wp-content/themes/victoryPropertyBuyers/partials/_header.scss
+++ b/app/public/wp-content/themes/victoryPropertyBuyers/partials/_header.scss
@@ -23,6 +23,6 @@
     background-position: center;
     object-fit: cover;
     width: 45%;
-    height: 70px;
+    height: 60px;
   }
 }
