--- a/app/public/wp-content/themes/victoryPropertyBuyers/partials/_hero.scss
+++ b/app/public/wp-content/themes/victoryPropertyBuyers/partials/_hero.scss
@@ -7,7 +7,7 @@
   width: 100%;
   z-index: -2;
   &__overlay {
-    background-color: rgba(0, 0, 0, 0.15);
+    background-color: rgba(0, 0, 0, 0.13);
     height: 100%;
     width: 100%;
     display: flex;
