--- a/app/public/wp-content/themes/victoryPropertyBuyers/partials/_how.scss
+++ b/app/public/wp-content/themes/victoryPropertyBuyers/partials/_how.scss
@@ -1,5 +1,5 @@
 .how {
-  width: 40%;
+  width: 45%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,13 +13,6 @@
     margin: 0;
     &-text {
       color: $blue;
-    }
-    &-button {
-      height: 30px;
-      color: #000060;
-      border: 1px solid $blue;
-      background-color: $orange;
-      border-radius: 4px;
     }
   }
 }
