--- a/app/public/wp-content/themes/victoryPropertyBuyers/partials/_reason.scss
+++ b/app/public/wp-content/themes/victoryPropertyBuyers/partials/_reason.scss
@@ -1,7 +1,7 @@
 .reason {
   color: $grey;
   height: 400px;
-  width: 40%;
+  width: 45%;
   display: flex;
   justify-content: center;
   align-items: center;
