--- a/app/public/wp-content/themes/victoryPropertyBuyers/partials/_stressFree.scss
+++ b/app/public/wp-content/themes/victoryPropertyBuyers/partials/_stressFree.scss
@@ -10,7 +10,7 @@
     color: $white;
   }
   &__div {
-    width: 40%;
+    width: 45%;
     margin: 0 auto;
     &-text {
       color: $white;
